# tauri-plugin-clubgermes-open

./: .gitignore  Cargo.toml  LICENSE  README.md
.github/workflows/: test.yml
android/: build.gradle.kts
android/src/main/java/: OpenPlugin.kt
ios/: Package.swift  README.md
ios/Sources/: OpenPlugin.swift
src/: desktop.rs  error.rs  lib.rs  mobile.rs
