[package]
authors = ["Lemuel DLS"]
description = "A Tauri plugin to open files and URLs in the user's default application."
edition = "2021"
exclude = ["/examples", "/webview-dist", "/webview-src", "/node_modules"]
license = "MIT"
links = "tauri-plugin-open"
name = "tauri-plugin-open"
rust-version = "1.65"
version = "0.1.1"

[dependencies]
serde = "1.0"
tauri = { version = "2.0.0-alpha.15" }
thiserror = "1.0"

# [target.'cfg(target_os = "linux")'.dependencies]
# webkit2gtk = "1.1.1"

[build-dependencies]
tauri-build = { version = "2.0.0-alpha.9" }
