[package]
authors = ["Lemuel DLS"]
description = "A Tauri plugin to open files and URLs in the user's default application."
edition = "2021"
exclude = ["/examples", "/webview-dist", "/webview-src", "/node_modules"]
license = "MIT"
links = "tauri-plugin-open"
name = "tauri-plugin-open"
rust-version = { workspace = true }
version = "0.1.2"

[dependencies]
serde = { workspace = true }
tauri = { workspace = true }
thiserror = { workspace = true }

# [target.'cfg(target_os = "linux")'.dependencies]
# webkit2gtk = "1.1.1"

[build-dependencies]
tauri-build = { workspace = true }
